Bug 1359951 - Ensure that the WebSocket not sending constructor when shutting down, r=nwgh